--- a/client-js-standalone/package.json
+++ b/client-js-standalone/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "@pipecat-cai/client-js",
-  "version": "1.0.0",
+  "name": "@think41/client-js-standalone",
+  "version": "0.1.0",
   "description": "PipeCat Client JS SDK with Transport Layer",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "publishConfig": {
+    "@think41:registry": "https://npm.pkg.github.com",
+    "access": "restricted"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/think41/client-sdk.git"
+  },
   "scripts": {
     "build": "tsup index.ts --format esm --dts",
     "prepublishOnly": "npm run build"
