--- a/foundation-voice-client-js/package.json
+++ b/foundation-voice-client-js/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "publishConfig": {
     "@think41:registry": "https://npm.pkg.github.com",
-    "access": "restricted"
+    "access": "public"
   },
   "repository": {
     "type": "git",
