--- a/foundation-voice-client-js/package.json
+++ b/foundation-voice-client-js/package.json
@@ -26,16 +26,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@pipecat-ai/client-js": "^0.3.5",
+    "@pipecat-ai/client-js": "^0.4.0",
     "@pipecat-ai/daily-transport": "^0.3.10",
-    "@pipecat-ai/small-webrtc-transport": "^0.0.5",
     "@pipecat-ai/gemini-live-websocket-transport": "^0.3.5",
     "@pipecat-ai/openai-realtime-webrtc-transport": "^0.3.6",
+    "@pipecat-ai/small-webrtc-transport": "^0.0.5",
+    "@pipecat-ai/websocket-transport": "^0.4.2",
     "protobufjs": "^7.5.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "tsup": "^7.0.0"
+    "tsup": "^7.0.0",
+    "typescript": "^5.0.0"
   },
   "typescript": {
     "tsconfig": "tsconfig.json"
